--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -114,6 +114,11 @@
                         <i class="material-icons">email</i>
                       <%end%>
                     </li>
+                    <li>
+                      <%= link_to anexos_path, class: "btn-floating deep-purple" do %>
+                        <i class="material-icons">description</i>
+                      <%end%>
+                    </li>
                    </ul>
                 </div>
               </div>
