--- a/app/views/manutencoes/show.html.erb
+++ b/app/views/manutencoes/show.html.erb
@@ -20,6 +20,9 @@
       
           <b>Tipo:</b>
           <%= @manutencao.modelo %> <br>
+
+          <b>Número de série:</b>
+          <%= @manutencao.serie %> <br>
     
           <b>Email:</b>
           <%= @manutencao.email %> <br>
