--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
                     <h4 class="center teal-text text-lighten-2"><%= categoria.nome %></h4>
                     <div class="card horizontal hide-on-small-only">
                         <div class="card-image">
-                            <%= link_to produtos_path  %>
+                            <%= link_to produtos_path do  %>
                                 <%= image_tag categoria.img.url(:medium) %>
                             <%end%>
                         </div>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="card hide-on-large-only">
                         <div class="card-image">
-                            <%= link_to produtos_path  %>
+                            <%= link_to produtos_path do %>
                                 <%= image_tag categoria.img.url(:medium) %>
                             <%end%>    
                         </div>
