--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -67,3 +67,7 @@ footer.footer-copyright{
 #tabela td{
   border: 1px solid #ccc;
 }
+table p{
+  margin-top: -10px !important;
+  margin-bottom: -10px !important;
+}
