--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,3 +1,8 @@
+<script>
+    $(document).ready(function(){
+      $('.scrollspy').scrollSpy();
+    });
+</script>
 <div class="wrapper">
     <div class="container">
         <h3 class="header teal-text text-lighten-2"><%= Produto.model_name.human %></h3>
@@ -5,14 +10,17 @@
 </div>
 <div class="container">
   <div class="row">
+    <div class="col s12 m9 l10">
       <% for categoria in Categoria.all.order(nome: :asc) %>
       <% if Produto.find_by_categoria_id(categoria.id) %>
-        <div class="card-panel hoverable" style="background: <%= categoria.classe %>;">
-          <div class="card-content" style="color: <%= categoria.texto %>;">
-            <h4 class="header text-lighten-2" style="color: <%= categoria.titulo %>;"> <%= categoria.nome %></h4>
-            <span> <%= raw(categoria.descricao) %></span>
-          </div>
-        </div>    
+        <div id="<%= categoria.nome%>" class="section scrollspy"></div> 
+          <div class="card-panel hoverable" style="background: <%= categoria.classe %>;">
+            <div class="card-content" style="color: <%= categoria.texto %>;">
+              <h4 class="header text-lighten-2" style="color: <%= categoria.titulo %>;"> <%= categoria.nome %></h4>
+              <span> <%= raw(categoria.descricao) %></span>
+            </div>
+          </div> 
+            
       <% end %>
      
         <% for produto in Produto.where('categoria_id = ?', categoria.id).order(ordem: :asc) %>
@@ -42,4 +50,14 @@
       
     <%end%> 
   </div>
+  <div class="col hide-on-small-only m3 l2">
+      <div style="position: fixed; top: 200px; ">
+        <ul class="section table-of-contents">
+          <% for categoria in Categoria.all.order(nome: :asc) %>
+            <li><a href="#<%= categoria.nome%>"><%= categoria.nome%></a></li>
+          <%end%>  
+        </ul>
+      </div>
+    </div>
+</div>
 </div>
