--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -13,7 +13,7 @@
     <div class="col s12 m9 l10">
       <% for categoria in Categoria.all.order(nome: :asc) %>
       <% if Produto.find_by_categoria_id(categoria.id) %>
-        <div id="<%= categoria.nome%>" class="section scrollspy"></div> 
+        <div id="<%= categoria.id%>" class="section scrollspy"></div> 
           <div class="card-panel hoverable" style="background: <%= categoria.classe %>;">
             <div class="card-content" style="color: <%= categoria.texto %>;">
               <h4 class="header text-lighten-2" style="color: <%= categoria.titulo %>;"> <%= categoria.nome %></h4>
@@ -54,7 +54,7 @@
       <div style="position: fixed; top: 200px; ">
         <ul class="section table-of-contents">
           <% for categoria in Categoria.all.order(nome: :asc) %>
-            <li><a href="#<%= categoria.nome%>"><%= categoria.nome%></a></li>
+            <li><a href="#<%= categoria.id%>"><%= categoria.nome%></a></li>
           <%end%>  
         </ul>
       </div>
