--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="row">
     <div class="col s12 m9 l10">
-      <% for categoria in Categoria.all.order(nome: :asc) %>
+      <% for categoria in Categoria.all.order(ordem: :asc) %>
       <% if Produto.find_by_categoria_id(categoria.id) %>
         <div id="<%= categoria.id%>" class="section scrollspy"></div> 
           <div class="card-panel hoverable" style="background: <%= categoria.classe %>;">
@@ -53,7 +53,7 @@
   <div class="col hide-on-small-only m3 l2">
       <div style="position: fixed; top: 200px; ">
         <ul class="section table-of-contents">
-          <% for categoria in Categoria.all.order(nome: :asc) %>
+          <% for categoria in Categoria.all.order(ordem: :asc) %>
           <% if Produto.find_by_categoria_id(categoria.id) %>
             <li><a href="#<%= categoria.id%>"><%= categoria.nome%></a></li>
           <%end%>  
