--- a/app/views/assistencias/index.html.erb
+++ b/app/views/assistencias/index.html.erb
@@ -28,7 +28,7 @@
     <div class="card-stacked">
       <div class="card-content">
         <p><b><%= assistencia.nome.upcase %></b></p>
-        <p><%= assistencia.endereco %>, <%= assistencia.cidade %> - <b><%= assistencia.estado %></b></p>
+        <p><%= assistencia.endereco %> <%= assistencia.cidade %> - <b><%= assistencia.estado %></b></p>
         <p><%= assistencia.email %></p>
       </div>
       <div class="card-action">
