--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -95,6 +95,11 @@
                   </a>
                   <ul>
                     <li>
+                      <%= link_to edit_email_path(1), class: "btn-floating orange" do %>
+                        <i class="material-icons">send</i>
+                      <%end%>
+                    </li>
+                    <li>
                       <%= link_to manutencoes_path, class: "btn-floating yellow" do %>
                         <i class="material-icons">build</i>
                       <%end%>
