--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         </div>
         <div class="row center">
             <% if usuario_signed_in? %>
-            <%= link_to  Produto.model_name.human, produtos_path, class: "btn-large waves-effect waves-light teal lighten-1"  %>
+            <%= link_to  Produto.model_name.human, categoria_path, class: "btn-large waves-effect waves-light teal lighten-1"  %>
             <% if usuario_signed_in? %>
                 <%= link_to  "Editar", edit_banner_path(1), class: "btn-large waves-effect waves-light teal lighten-1"  %>
             <%end%>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="card hide-on-large-only">
                         <div class="card-image">
-                            <%= link_to produtos_path do %>
+                            <%= link_to categoria_path do %>
                                 <%= image_tag categoria.img.url(:medium) %>
                             <%end%>    
                         </div>
