--- a/app/views/artigos/_form.html.erb
+++ b/app/views/artigos/_form.html.erb
@@ -24,6 +24,13 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="input-field col s12">
+      <%= form.text_field :ordem, id: :artigo_ordem %>
+      <%= form.label :ordem %>
+    </div>  
+  </div>
+
 
   <div class="row">
     <div class="input-field col s12">
